[package]
name = "qthub"
version = "1.1.3"
description = "The hub for all things QTShock"
authors = ["QTShock"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dns-lookup = "2.0.4"
reqwest = { version = "0.12.4", features= ["blocking"] }
rosc = "~0.10"
gsi-cs2 = "0.1.1"
poem = { version = "1.3.48", features = ["server"] }
tracing-subscriber = { version = "0.3.16" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serialport = "4.4.0"
espflash = { version = "3.0.0", features = ["serialport", "cli"], default-features = false }
tempfile = "3.10.1"
rfd = "0.14.1"
vdf-serde = "0.3.0"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
